# practice_emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cache analysis.typ  flake.nix
assembler/: asm.py  example.asm
include/: cache.h  emu4380.h
programs/: FibA.asm  FibC.asm  Mod.asm  Primes.asm  ProgA_0.cpp  ProgA_1.cpp  ProgA_2.cpp  ProgB.cpp  ProgC.cpp
src/: cache.cpp  emu.cpp  emu4380.cpp  main.cpp
tests/: BinaryFileComparison.py  test.asm  tests.py  tests1.cpp  tests2.cpp
tests/test_files/: prog_d.asm
